--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@prisma/client": "^5.14.0",
-    "mongodb": "^6.6.1",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@prisma/client": "^5.18.0",
+    "mongodb": "^6.8.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "prisma": "^5.14.0",
-    "typescript": "^5"
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "prisma": "^5.18.0",
+    "typescript": "^5.5.4"
   }
 }
