--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.0",
     "mongodb": "^6.8.0",
-    "next": "^14.2.5",
+    "next": "^14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -23,7 +24,7 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "typescript": "^5.5.4"
   }
 }
